# PixelDone-windows

./: .gitattributes  .gitignore  FONT_ATTRIBUTIONS.md  README.md  RELEASE_NOTES.md  RELEASE_SPEC.md  package.json  rust-toolchain.toml  wdio.conf.ts
.github/scripts/: Publish-GitHubRelease.ps1  Publish-GiteeRelease.ps1
.github/workflows/: ci.yml  release-windows.yml
docs/: architecture.md  design-system.md  parity.md  release-3.1.1.md  release-3.1.2.md  ui-acceptance.md
e2e/: helpers.ts
e2e/specs/: auth.e2e.ts  bootstrap.e2e.ts  checklist.e2e.ts  cloud.e2e.ts  image.e2e.ts  layout.e2e.ts  reminder.e2e.ts  settings.e2e.ts  todo.e2e.ts  trash.e2e.ts  update.e2e.ts
parity/: pixeldone-3.0.3.yaml  pixeldone-3.1.0.yaml  pixeldone-3.1.2.yaml  pixeldone-3.1.3.yaml  pixeldone-3.2.0.yaml  pixeldone-3.2.1.yaml  pixeldone-3.2.2.yaml  pixeldone-3.2.3.yaml  pixeldone-3.2.4.yaml  pixeldone-3.2.5.yaml  pixeldone-3.2.6.yaml  pixeldone-3.2.7.yaml  pixeldone-3.2.8.yaml  pixeldone-3.2.9.yaml  pixeldone-3.3.0.yaml
parity/evidence/android/: candidate-3.2.0.md  candidate-3.3.0.md  release-3.1.0.md
parity/evidence/windows/: candidate-3.1.3.md  candidate-3.2.0.md  candidate-3.2.1.md  candidate-3.2.2.md  candidate-3.2.3.md  candidate-3.2.4.md  candidate-3.2.5.md  candidate-3.2.6.md  candidate-3.2.7.md  candidate-3.2.8.md  candidate-3.2.9.md  candidate-3.3.0.md  release-3.1.0.md  release-3.1.1.md  release-3.1.2.md
scripts/: destructive.test.ts  generate-parity-report.ts  generate-release-manifest.ts  markdown-export.test.ts  parity.test.ts  parity.ts  revision.test.ts  trash.test.ts  typography.test.ts  ui-auth.test.ts  ui-dock.test.ts  ui-editor.test.ts  ui-password.test.ts  verify-parity.ts  version.test.ts  windows-i18n.test.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json  tauri.e2e.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_core.sql  0002_sync.sql  0003_attachments.sql  0004_windows_runtime.sql  0005_notification_policy.sql  0006_layout.sql  0007_attachment_sync.sql  0008_sidebar_range.sql  0009_sync_pristine.sql  0010_sidebar_range_720.sql
src-tauri/signing/: pixeldone-updater.key.pub
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: events.rs  mod.rs  services.rs  state.rs
src-tauri/src/application/commands/: auth.rs  bootstrap.rs  checklist.rs  image.rs  mod.rs  reminder.rs  settings.rs  storage.rs  sync.rs  todo.rs  update.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/checklist/: mod.rs
src-tauri/src/domain/dock/: mod.rs
src-tauri/src/domain/reminder/: mod.rs
src-tauri/src/domain/sync/: mod.rs
src-tauri/src/domain/todo/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/auth/: mod.rs
src-tauri/src/infrastructure/credentials/: mod.rs
src-tauri/src/infrastructure/db/: mod.rs
src-tauri/src/infrastructure/image/: mod.rs
src-tauri/src/infrastructure/realtime/: mod.rs
src-tauri/src/infrastructure/reminder/: mod.rs
src-tauri/src/infrastructure/repository/: mod.rs
src-tauri/src/infrastructure/sync/: mod.rs
src-tauri/src/infrastructure/update/: mod.rs
src-tauri/src/platform/windows/: activation.rs  credentials.rs  identity.rs  lifecycle.rs  mod.rs  notification.rs
src-tauri/tests/: migrations.rs  release_integrity.rs  windows_productization.rs
src/lib/components/auth/: AuthModal.svelte  PasswordModal.svelte  auth.ts  password.ts
src/lib/components/common/: Icon.svelte  ScriptAwareText.svelte
src/lib/components/shell/: DeleteChecklistModal.svelte  DestructiveActionModal.svelte  MarkdownExportModal.svelte  PixelDoneApp.svelte  TodoDock.svelte  TodoEditorModal.svelte  destructive.ts  dock.ts  editor.ts  markdown-export.ts  trash.ts
src/lib/i18n/: presentation.ts  windows.ts
src/lib/ipc/: client.ts  events.ts  revision.ts
src/lib/keyboard/: shortcuts.ts
src/lib/state/: app.svelte.ts
src/lib/styles/: base.css  layout.css  motion.css  tokens.css
src/lib/test/: tauri-mocks.ts
src/lib/typography/: script-aware.ts
src/routes/: +page.svelte
src/routes/alarm/: +page.svelte
