[package]
name = "pixeldone-windows"
version = "3.1.0-rc.1"
description = "Rust-first Windows client for PixelDone"
authors = ["CODEX & XUE"]
edition = "2024"
default-run = "pixeldone-windows"

[lib]
name = "pixeldone_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
