[package]
name = "pixeldone-windows"
version = "3.1.3"
description = "Rust-first Windows client for PixelDone"
authors = ["CODEX & XUE"]
edition = "2024"
default-run = "PixelDone"
autobins = false

[features]
bindings = []

[[bin]]
name = "PixelDone"
path = "src/main.rs"

[[bin]]
name = "export_bindings"
path = "src/bin/export_bindings.rs"
required-features = ["bindings"]

[lib]
name = "pixeldone_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
tauri-plugin-updater = "2.10"
tauri-plugin-wdio = "1.2"
tauri-plugin-wdio-webdriver = "1.2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.62", features = [
  "Data_Xml_Dom",
  "Foundation",
  "UI_Notifications",
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem"
] }

[dev-dependencies]
minisign-verify = "0.2.5"
